# datasaude-api

./: .env.docker  .env.template  .gitignore  Dockerfile  README.md  app.log.1  app.log.2  datasaude-api-arm-ingress.yaml  datasaude-api-arm.yaml  datasaude-api-mgc.yaml  db1.sqlite  docker-compose.yml  main.py  pyproject.toml  run_worker.py  start.sh  startup.sh
.github/workflows/: main.yml  prod-hard-deploy.yml  prod-old.yml  prod.yml  release-mgc.yml  release.yml
api/: __init__.py
api/ibge/v1/: ibge_v1.py
api/ibge/v2/: ibge_v2.py
app/ibge/models/: __init__.py  (+6 more)
argocd-arm/: datasaude-api-arm.yaml
argocd-mgc/: datasaude-api-mgc-ingress.yaml  datasaude-api-mgc.yaml
celery_task/: __init__.py
celery_task/poluente_job/: poluente_job.py
celery_task/tasks/: geolocalizacao_task.py  paciente_task.py
core/: config.py  mongo.py
core/db/: __init__.py  db1.sqlite  sqlite.py
core/helpers/: redis.py
core/repository/: base.py
core/utils/: counter.py  logger.py
docker/: executa_backup.sh
docker/api/: Dockerfile  Dockerfile-old  startup.sh
integrations/: datasaude_api.py
listeners/: config.py  geolocalizacao_listener.py  interpolacao_listener.py  paciente_listener.py
migrations/: env.py
migrations/queries/: acompanhanto.sql
migrations/versions/: 27691f7c4778_create_table_poluente_scrap.py  301692715a1a_create_status_column.py  b6238f4a516b_indice_id_desc_poluente.py  dc0c714ec0a8_criar_poluente_table.py  eb00028f8289_indice_poluente_nome_e_data.py  f1c0e9a5b211_create_ibge_formula_customizada_table.py
scripts/: CIDs.txt  carga_paciente_previsao.py
(+62 files in other folders)
