[tool.poetry]
name = "fastapi-boilerplate"
version = "0.1.0"
description = "FastAPI Boilerplate"
authors = ["Hide <padocon@naver.com>"]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.8.1"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.40"}
PyJWT = "^2.4.0"
uvicorn = "^0.18.3"
fastapi = "^0.81.0"
celery = "^5.2.7"
gunicorn = "^20.1.0"
fastapi-event = "^0.1.3"
pythondi = "^1.2.4"
ujson = "^5.4.0"
aiomysql = "^0.1.1"
click = "^8.1.3"
greenlet = "1.1.3"
redis = "^4.3.4"
python-dotenv = "^1.0.0"
apscheduler = "^3.10.1"
python-multipart = "^0.0.6"
boto3 = "^1.28.37"
pyproj = "^3.6.1"
geopy = "^2.4.0"
pydash = "^7.0.6"
geopandas = "^0.14.0"
shapely = "^2.0.1"

[tool.poetry.dev-dependencies]
behave = "^1.2.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
use-pep517 = false
